create auth relationship with resellers, create auth model and fix tests for create new reseller
