# api/config/routes/v1/auth-routes.js
@@ -1,0 +1,7 @@
+const express = require('express');
+const router = express.Router();
+const { authEmailProvider } = require('../../../controllers/v1/auth/auth-controller');
+
+router.post('/', authEmailProvider);
+
+module.exports = router;
