# api/config/routes/v1/index.js
@@ -1,5 +1,6 @@
 const express = require('express');
 const resellerRoutes = require('./reseller-routes');
+const authRoutes = require('./auth-routes');
 
 const router = express.Router();
 
@@ -10,5 +11,6 @@ router.get('/', function(req, res, next) {
 });
 
 router.use('/resellers', resellerRoutes);
+router.use('/auth', authRoutes);
 
 module.exports = router;
