# api/controllers/v1/auth/auth-controller-schema.js
@@ -1,0 +1,10 @@
+const { object, string } = require('yup');
+
+const authEmailSchema = object().shape({
+  email: string().required().email(),
+  password: string().required().min(8),
+});
+
+module.exports = {
+  authEmailSchema,
+};
