# db/models/data-types/create-update-timestamp-data-types.js
@@ -1,0 +1,13 @@
+const { DATE } = require('sequelize');
+
+module.exports = (dataTypes) => ({
+  ...dataTypes,
+  created_at: {
+    allowNull: false,
+    type: DATE,
+  },
+  updated_at: {
+    allowNull: false,
+    type: DATE,
+  },
+});
