# public/swagger.json
@@ -9,6 +9,8 @@ info:
 host: "localhost:3000"
 basePath: "/api/"
 tags:
+  - name: "Auth"
+    description: "Authentication"
   - name: "Resellers"
     description: "Operations about resellers"
 schemes:
@@ -19,6 +21,29 @@ securityDefinitions:
     name: Authorization
     in: header
 paths:
+  /v1/auth:
+    post:
+      tags:
+      - "Auth"
+      summary: "Authenticate user"
+      description: "This for authenticate users."
+      operationId: "authUser"
+      produces:
+      - "application/json"
+      parameters:
+      - in: "body"
+        name: "body"
+        description: "Get user token"
+        required: true
+        schema:
+          $ref: "#/definitions/AuthInput"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/Token"
+        404:
+          description: "User not found"
   /v1/resellers:
     post:
       tags:
@@ -44,6 +69,53 @@ paths:
         400:
           description: "Bad Request"
 definitions:  
+  Token:
+    properties:
+      jwt:
+        type: "string"
+    type: object
+  Auth:
+    properties:
+      id:
+        type: "integer"
+        format: "int64"
+      email:
+        type: "string"
+      password:
+        type: "string"
+      created_at:
+        type: "string"
+      updated_at:
+        type: "string"
+    type: object
+  AuthModel:
+    properties:
+      id:
+        type: "integer"
+        format: "int64"
+      email:
+        type: "string"
+      password:
+        type: "string"
+      created_at:
+        type: "string"
+      updated_at:
+        type: "string"
+      deleted_at:
+        type: "string"
+    type: object
+  AuthInput:
+    properties:
+      email:
+        type: "string"
+        format: email
+        example: "claudio@example.com"
+      password:
+        type: "string"
+        minValue: 8
+        example: "123456789"
+    type: object
+  
   Reseller:
     properties:
       id:
@@ -54,6 +126,8 @@ definitions:
       last_name:
         type: "string"
       cpf:
+        type: "string"
+      email:
         type: "string"
       created_at:
         type: "string"
@@ -88,4 +162,8 @@ definitions:
         type: "string"
         minValue: 11
         maxValue: 14
+      auth:
+        properties:
+          schema:
+            $ref: "#/definitions/AuthInput"
     type: object
